revise handlers, add more usecases and repo
