# docs/swagger.json
@@ -38,6 +38,18 @@
                         "description": "pagination page",
                         "name": "page",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "seller id",
+                        "name": "seller_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -211,6 +223,12 @@
                         "type": "string",
                         "description": "pagination page",
                         "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "seller id",
+                        "name": "seller_id",
                         "in": "query"
                     }
                 ],
